# ComfyUI-InpaintRegionEditor

./: CHANGELOG.md  DEVLOG.md  LICENSE  README.md  README_CN.md  __init__.py  nodes.py  pyproject.toml  workflow.json
.github/workflows/: publish.yml
.sisyphus/drafts/: project-exploration.md
docs/: HANDOFF.md  InpaintRegionEditor_Implementation_Plan.md  QUICKSTART.md  TEST-CHECKLIST.md  implementation-plan.md  technical-validation.md
docs/plans/: 2026-02-27-inpaint-region-editor-design.md  photopea-mask-editor-design.md
web/: extension.js
web/locales/en/: main.json
web/locales/zh/: main.json
